@@ -118,6 +118,7 @@ const struct ecc_curve nettle_secp_192r1 =
     ECC_BMODP_SIZE,
     ECC_REDC_SIZE,
     ECC_MOD_INV_ITCH (ECC_LIMB_SIZE),
+    0,
 
     ecc_p,
     ecc_Bmodp,
@@ -128,6 +129,7 @@ const struct ecc_curve nettle_secp_192r1 =
     ecc_192_modp,
     ecc_192_modp,
     ecc_mod_inv,
+    NULL,
   },
   {
     192,
@@ -135,6 +137,7 @@ const struct ecc_curve nettle_secp_192r1 =
     ECC_BMODQ_SIZE,
     0,
     ECC_MOD_INV_ITCH (ECC_LIMB_SIZE),
+    0,
 
     ecc_q,
     ecc_Bmodq,
@@ -145,6 +148,7 @@ const struct ecc_curve nettle_secp_192r1 =
     ecc_mod,
     ecc_mod,
     ecc_mod_inv,
+    NULL,
   },
   
   USE_REDC,
