@@ -70,6 +70,7 @@ const struct ecc_curve nettle_secp_224r1 =
     ECC_BMODP_SIZE,
     -ECC_REDC_SIZE,
     ECC_MOD_INV_ITCH (ECC_LIMB_SIZE),
+    0,
 
     ecc_p,
     ecc_Bmodp,
@@ -80,6 +81,7 @@ const struct ecc_curve nettle_secp_224r1 =
     ecc_224_modp,
     USE_REDC ? ecc_224_redc : ecc_224_modp,
     ecc_mod_inv,
+    NULL,
   },
   {
     224,
@@ -87,6 +89,7 @@ const struct ecc_curve nettle_secp_224r1 =
     ECC_BMODQ_SIZE,
     0,
     ECC_MOD_INV_ITCH (ECC_LIMB_SIZE),
+    0,
 
     ecc_q,
     ecc_Bmodq,
@@ -97,6 +100,7 @@ const struct ecc_curve nettle_secp_224r1 =
     ecc_mod,
     ecc_mod,
     ecc_mod_inv,
+    NULL,
   },
   
   USE_REDC,
