@@ -233,6 +233,7 @@ const struct ecc_curve nettle_secp_256r1 =
     ECC_BMODP_SIZE,
     ECC_REDC_SIZE,
     ECC_MOD_INV_ITCH (ECC_LIMB_SIZE),
+    0,
 
     ecc_p,
     ecc_Bmodp,
@@ -243,6 +244,7 @@ const struct ecc_curve nettle_secp_256r1 =
     ecc_256_modp,
     USE_REDC ? ecc_256_redc : ecc_256_modp,
     ecc_mod_inv,
+    NULL,
   },
   {
     256,
@@ -250,6 +252,7 @@ const struct ecc_curve nettle_secp_256r1 =
     ECC_BMODQ_SIZE,
     0,
     ECC_MOD_INV_ITCH (ECC_LIMB_SIZE),
+    0,
 
     ecc_q,
     ecc_Bmodq,
@@ -260,6 +263,7 @@ const struct ecc_curve nettle_secp_256r1 =
     ecc_256_modq,
     ecc_256_modq,
     ecc_mod_inv,
+    NULL,
   },
 
   USE_REDC,
