@@ -83,6 +83,7 @@ const struct ecc_curve nettle_secp_521r1 =
     ECC_BMODP_SIZE,
     ECC_REDC_SIZE,
     ECC_MOD_INV_ITCH (ECC_LIMB_SIZE),
+    0,
 
     ecc_p,
     ecc_Bmodp,
@@ -93,6 +94,7 @@ const struct ecc_curve nettle_secp_521r1 =
     ecc_521_modp,
     ecc_521_modp,
     ecc_mod_inv,
+    NULL,
   },
   {
     521,
@@ -100,6 +102,7 @@ const struct ecc_curve nettle_secp_521r1 =
     ECC_BMODQ_SIZE,
     0,
     ECC_MOD_INV_ITCH (ECC_LIMB_SIZE),
+    0,
 
     ecc_q,
     ecc_Bmodq,
@@ -110,6 +113,7 @@ const struct ecc_curve nettle_secp_521r1 =
     ecc_mod,
     ecc_mod,
     ecc_mod_inv,
+    NULL,
   },
   
   USE_REDC,
